
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int wVersion; } ;
typedef TYPE_1__ WSADATA ;
typedef int WORD ;


 scalar_t__ HIBYTE (int ) ;
 int LOBYTE (int ) ;
 int MAKEWORD (int,int ) ;
 int WSACleanup () ;
 int WSAStartup (int ,TYPE_1__*) ;

bool tcpInit()
{
WORD wVersionRequested;
WSADATA wsaData;
int err;

wVersionRequested = MAKEWORD( 2, 0 );

err = WSAStartup( wVersionRequested, &wsaData );
if ( err != 0 ) {
return 0;
}

if (LOBYTE( wsaData.wVersion ) != 2 ||
        HIBYTE( wsaData.wVersion ) != 0 )
{
WSACleanup();
return 0;
}

return 1;
}
